# ml-shared-training

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: download_datasets.py  prepare_data.py
tests/: __init__.py  test_download_datasets.py  test_prepare_data.py
